# diff-svc

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements_torch.txt
doc/: train_and_inference.markdown
preprocessing/: base_binarizer.py
training/: config.yaml
